feat: upload logic done

--- a/src/components/ui/button/button.module.scss
+++ b/src/components/ui/button/button.module.scss
@@ -91,7 +91,11 @@
 }
 
 .link {
-  @include button($color: var(--color-accent-500), $bgColor: none, $boxShadow: none);
+  @include button(
+    $color: var(--color-accent-500),
+    $bgColor: none,
+    $boxShadow: none
+  );
 
   padding: 6px 12px;
   border: 1px solid transparent;
