--- a/src/components/ui/typography/typography.module.scss
+++ b/src/components/ui/typography/typography.module.scss
@@ -1,4 +1,4 @@
-@import '@/styles/mixins';
+@import "@/styles/mixins";
 
 //base style======================================================================
 .body1 {
