--- a/src/features/upload-page/file-list/file-list.module.scss
+++ b/src/features/upload-page/file-list/file-list.module.scss
@@ -3,6 +3,11 @@
   padding: 0;
   margin:  0;
 }
+.head {
+  th {
+    font-weight: 800;
+  }
+}
 .cellName {
   width: 300px;
   display: -webkit-box;
