--- a/src/features/upload-page/file-list/file-list.module.scss
+++ b/src/features/upload-page/file-list/file-list.module.scss
@@ -1,7 +1,7 @@
 .cellProgress {
   width: 250px;
   padding: 0;
-  margin:  0;
+  margin: 0;
 }
 .head {
   th {
@@ -10,16 +10,16 @@
 }
 .cellName {
   width: 300px;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 1;
-  overflow: hidden;
 }
 .cellStatus {
-width: 250px;
+  width: 400px;
 }
 .uploadingRow {
   background-color: #f2d679;
+}
+.errorRow {
+  background-color: grey;
+  color: red;
 }
 
 .defaultRow {
