--- a/src/features/upload-page/file-list/file-list.module.scss
+++ b/src/features/upload-page/file-list/file-list.module.scss
@@ -15,13 +15,13 @@
   width: 400px;
 }
 .uploadingRow {
-  background-color: #f2d679;
+  background-color: var(--color-warning-100);
 }
 .errorRow {
-  background-color: grey;
-  color: red;
+  background-color: var(--color-danger-100);
+  color: var(--color-light-100);
 }
 
-.defaultRow {
-  background-color: #9aef9a;
+.successRow {
+  background-color: var(--color-success-100);
 }
